# tpzq

./: CMakeLists.txt  build.py  cava_controller.cxx  cava_controller.hxx  config_manager.cxx  config_manager.hxx  hyprland_controller.cxx  hyprland_controller.hxx  imgui_manager.cxx  imgui_manager.hxx  main.cxx  main2.cxx  theme_switcher.cxx  theme_switcher.hxx  wallpaper_controller.cxx  wallpaper_controller.hxx  waybar_controller.cxx  waybar_controller.hxx  wofi_controller.cxx  wofi_controller.hxx
themes/: 1.json  2.json  3.json  aska.json  rei.json  splt.json  theme_1.json  theme_2.json
